[project]
name = "Artanis"
version = "0.0.1"
description = "A new generation, cloud ready, web based application platform inspired by Kraken"
authors = [
    {name = "jazle", email = "jaimy.azle@busanagroup.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["src/hypercorn/py.typed"]
license = {text = "Proprietary"}
readme = "README.md"
repository = "https://github.com/busanagroup/artanis"
dependencies = [
    "Hypercorn >= 0.18.0",
    "fastapi >= 0.135.1",
    "taskiq-redis >= 1.2.2",
    "uvloop >= 0.22.1",
    "sqlalchemy >= 2.0.48",
    "asyncpg >= 0.31.0",
    "portalocker >= 3.2.0",
]
requires-python = ">=3.14"

[project.scripts]
artanis = "artanis.__main__:main"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "artanis, tests"
line_length = 100
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
order_by_type = false
reverse_relative = true

[tool.mypy]
allow_redefinition = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module =["fastapi.*", "starlette.*", "sqlalchemy.*", "uvloop.*"]
ignore_missing_imports = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"